[tool.poetry]
name = "vim-victor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vim_victor"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
flake8 = "^6.0.0"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
